# databricks-mlops-finance-pipeline

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  databricks.yml  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  story.yml  task.yml
.github/workflows/: ci.yml  label-sync.yml
docs/: evidence_checklist.md  roadmap_crispdm_mlops.md
docs/architecture/: diagramas_unificados_databricks_mlflow.docx
docs/decisions/: 0001-use-dab.md  0002-conventions.md
docs/runbook/: README.md
notebooks/: 01_ingest_bronze.py  02_transform_silver_gold.py  03_train_mlflow.py  04_batch_scoring.py
resources/: workflow_main.yml
src/databricks_mlops_finance_pipeline/: __init__.py  config.py
